# yalr

./: .gitignore  .gitlab-ci.yml  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
bench/: Cargo.toml
bench/benches/: parse_benchmark.rs
docs/: CONTRIBUTING.md
examples/calculator/: Cargo.toml
examples/calculator/src/: main.rs
examples/json/: Cargo.toml  build.rs  transform.py
examples/json/src/: lib.rs  main.rs
examples/json/tests/: parsing.rs
scripts/: pre-commit
tests/: README.md
tests/test_utils/: Cargo.toml
tests/test_utils/src/: ab_universe.rs  lib.rs
tests/unknown_terminals/: Cargo.toml
tests/unknown_terminals/src/: lib.rs
yalr/: Cargo.toml
yalr/src/: error.rs  lib.rs  traits.rs
yalr/src/extra/: logos_support.rs  mod.rs  trace.rs
yalr_cli/: Cargo.toml
yalr_cli/src/: graphviz.rs  main.rs  parse.rs  table.rs
yalr_codegen/: Cargo.toml  build.rs
yalr_codegen/src/: codegen.rs  enum_variant.rs  error.rs  grammar.rs  lib.rs  parse.rs  symbols.rs
yalr_core/: Cargo.toml
yalr_core/src/: lib.rs  quote_support.rs  traits.rs
yalr_core/src/lalr/: action.rs  assoc.rs  grammar.rs  item.rs  mod.rs  parse_table.rs  rule.rs  state.rs  symbol.rs
yalr_proc_macro/: Cargo.toml
yalr_proc_macro/src/: lib.rs
