[package]
name = "yalr_codegen"
version = "0.1.0"
authors = ["Tim Süberkrüb <dev@timsueberkrueb.io>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
# TODO: Remove once type_alias_enum_variants (RFC 2338) gets stabilized
rustc_version = "0.2.3"

[dependencies]
regex = "1"
proc-macro2 = "0.4"
quote = "0.6"
combine = "3.6"
yalr_core = { path ="../yalr_core" }

[dependencies.syn]
version = "0.15"
features = ["full", "extra-traits", "parsing"]
